# glue-map

./: .gitignore  README.md  Small_Power_Plants.geojson  environment.yml  setup.cfg  setup.py
glue_map/: __init__.py  data.py  datacommons_widget.py  generate_region_data.py  get_counties.py
glue_map/map/: __init__.py  layer_artist.py  state.py  tools.py  utils.py  viewer.py
glue_map/map/state_widgets/: layer_map.py  layer_map.vue  viewer_map.py  viewer_map.vue
glue_map/map/tests/: test_viewer.py
glue_map/map/tests/data/: matowns.geojson  state_capitols.txt  state_capitols_v2.txt  test_map_data.csv
glue_map/tests/: test_data.py
glue_map/timeseries/: __init__.py  layer_artist.py  state.py  viewer.py
glue_map/timeseries/state_widgets/: layer_timeseries.py  viewer_timeseries.py
glue_map/traces/: __init__.py  layer_artist.py  state.py  viewer.py
glue_map/traces/state_widgets/: layer_traces.py  layer_traces.vue  viewer_traces.py  viewer_traces.vue
notebooks/: glue-map-demo.ipynb
