[metadata]
name = glue-map
url = https://www.glueviz.org
author = Jonathan Foster
author_email = jonathan.bruce.foster@gmail.com
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: BSD License
description = Viewer for map-like data
version = 0.1

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    ipyleaflet>=0.17
    geopandas
    glue_core
    glue_jupyter
    ipywidgets
    datacommons_pandas
    xarray
    h5netcdf
    rioxarray
    jupyterlab
    timezonefinder
    
[options.entry_points]
glue.plugins =
    glue_map = glue_map:setup

[options.extras_require]
qt =
    PyQt5>=5.9
test =
    pytest

[options.package_data]
* = *.png, *.ui, *.glu, *.hdf5, *.fits, *.xlsx, *.txt, *.csv, *.svg, *.vot, *.bgz, *.tbi, *.vue
glue_map.icons = *.svg

[flake8]
max-line-length = 120
